--- a/lib/prmd/templates/schemata/link.md.erb
+++ b/lib/prmd/templates/schemata/link.md.erb
@@ -3,32 +3,21 @@
   response_example = link['response_example']
   link_schema_properties_template = Prmd::Template.load_template('link_schema_properties.md.erb', options[:template])
 -%>
-### <%= title %> <%= link['title'] %>
+### <%= link['title'] %>
 
-<%= link['description'] %>
-
-```
-<%= link['method'] %> <%= path %>
-```
-
-<%- if link.has_key?('schema') && link['schema'].has_key?('properties') %>
-  <%-
-    required, optional = Prmd::Link.new(link).required_and_optional_parameters
-  %>
-  <%- unless required.empty? %>
-#### Required Parameters
-
-<%= link_schema_properties_template.result(params: required, schema: schema, options: options) %>
-
-  <%- end %>
-  <%- unless optional.empty? %>
-#### Optional Parameters
-
-<%= link_schema_properties_template.result(params: optional, schema: schema, options: options) %>
-  <%- end %>
-<%- end %>
-
-#### Curl Example
+<%=
+  url_options = options.dup
+  http_header = link['http_header'] || {}
+  url_options[:http_header] = url_options[:http_header].merge(http_header)
+  Prmd::Template.render('schemata/link_http_example.md.erb', File.dirname(options[:template]), {
+    options:         url_options,
+    resource:        resource,
+    schema:          schema,
+    schemata:        schemata,
+    link:            link,
+    path:            path
+  })
+%>
 
 <%=
   curl_options = options.dup
@@ -44,13 +33,9 @@
   })
 %>
 
-#### Response Example
-
-```
-<%- if response_example %>
-<%=   response_example['head'] %>
-<%- else %>
-HTTP/1.1 <%=
+<%- if link['method'].upcase == 'GET' %>
+```http
+HTTP/<%= options[:http_version] %> <%=
   case link['rel']
   when 'create'
     '201 Created'
@@ -59,22 +44,38 @@ HTTP/1.1 <%=
   else
     '200 OK'
   end %>
-<%- end %>
-```
+Content-Type: <%= link['mediaType'] %>
 
 <%- if response_example || link['rel'] != 'empty' %>
-```json
-<%- if response_example %>
-<%=   response_example['body'] %>
-<%- else %>
 <%-   if link['rel'] == 'empty' %>
 <%-   elsif link.has_key?('targetSchema') %>
 <%=     JSON.pretty_generate(schema.schema_example(link['targetSchema'])) %>
 <%-   elsif link['rel'] == 'instances' %>
-<%=     JSON.pretty_generate([schema.schemata_example(resource)]) %>
+<%=     JSON.pretty_generate(schema.schemata_example(resource)) %>
 <%-   else %>
 <%=     JSON.pretty_generate(schema.schemata_example(resource)) %>
 <%-   end %>
 <%- end %>
 ```
+<%- end %>
+
+`<%= link['method'] %> <%= path %>`
+
+<%= link['description'] %>
+
+<%- if link.has_key?('schema') && link['schema'].has_key?('properties') %>
+  <%-
+    required, optional = Prmd::Link.new(link).required_and_optional_parameters
+  %>
+  <%- unless required.empty? %>
+*Required parameters*
+
+<%= link_schema_properties_template.result(params: required, schema: schema, options: options) %>
+
+  <%- end %>
+  <%- unless optional.empty? %>
+*Optionnal parameters*
+
+<%= link_schema_properties_template.result(params: optional, schema: schema, options: options) %>
+  <%- end %>
 <%- end %>
