Fixed templates helper.

--- a/lib/prmd/templates/schemata/helper.erb
+++ b/lib/prmd/templates/schemata/helper.erb
@@ -142,7 +142,7 @@
     end
 
     if value['minLength'] || value['maxLength']
-      description += "<br/> **Length:** `"
+      description += "<br/> **length:** `"
       if value['minLength']
         description += "#{value['minLength']}"
       end
